docs: agregar archivo de configuración
-Instrucciones detalladas de instalación
-Ejemplos de configuración

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 ### Carpetas ###
-**docs
+***docs/images/diagrams
+***docs/Comando
+***docs/descripcion_traductor_kaqchikel.docx
 ***target/src/
+***target/database/
+***lib
+
 
 
 ### Java ###
