feat: Agregar selección de fila en tabla, mostrar resultados al hacer clic en segerencias de búsqueda.

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 ### Carpetas ###
-***docs/images/diagrams
+***docs/images/diagrams/
 ***docs/Comando
 ***docs/descripcion_traductor_kaqchikel.docx
-***target/src/
-***target/database/
 ***lib
+***target
+
 
 
 
